# iris-solana

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.superstack/: build-context.md
clients/ts/: package.json  tsconfig.json
clients/ts/src/: index.ts  receipt.ts  relayer.ts  types.ts  verify.ts
clients/ts/src/da/: celestia.ts  solana.ts
clients/ts/tests/: receipt.spec.ts
docs/: index.html
migrations/: deploy.ts
programs/iris-receipts/: Cargo.toml
programs/iris-receipts/src/: error.rs  lib.rs  state.rs
programs/iris-receipts/src/instructions/: commit_root.rs  issue_receipt.rs  mod.rs  verify_receipt.rs
programs/verifier-example/: Cargo.toml
programs/verifier-example/src/: lib.rs
scripts/: setup.sh
tests/: iris-receipts.ts
