[package]
name = "verifier-example"
version = "0.1.0"
description = "Example downstream program that verifies an Iris receipt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "verifier_example"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "iris-receipts/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
iris-receipts = { path = "../iris-receipts", features = ["no-entrypoint"] }
